@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.apache.harmony.tests.java.lang.reflect;
@@ -569,7 +569,7 @@ public class ArrayTest extends junit.framework.TestCase {
         int[] x = { 0 };
         boolean thrown = false;
         try {
-            Array.set(x, 0, new Integer(1));
+            Array.set(x, 0, Integer.valueOf(1));
         } catch (Exception e) {
             fail("Exception during get test : " + e.getMessage());
         }
@@ -586,7 +586,7 @@ public class ArrayTest extends junit.framework.TestCase {
         }
         thrown = false;
         try {
-            Array.set(x, 4, new Integer(1));
+            Array.set(x, 4, Integer.valueOf(1));
         } catch (ArrayIndexOutOfBoundsException e) {
             // Correct behaviour
             thrown = true;
