@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.apache.harmony.tests.java.util;
@@ -39,7 +39,7 @@ public class ConcurrentModificationExceptionTest extends
         }
 
         public void run() {
-            Object someItem = new Integer(-1);
+            Object someItem = Integer.valueOf(-1);
             while (keepGoing) {
                 col.add(someItem);
                 col.remove(someItem);
@@ -55,7 +55,7 @@ public class ConcurrentModificationExceptionTest extends
         Collection myCollection = new LinkedList();
         Iterator myIterator = myCollection.iterator();
         for (int counter = 0; counter < 50; counter++)
-            myCollection.add(new Integer(counter));
+            myCollection.add(Integer.valueOf(counter));
         CollectionModifier cm = new CollectionModifier(myCollection);
         Thread collectionSlapper = new Thread(cm);
         try {
