@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.apache.harmony.tests.java.util;
@@ -438,7 +438,7 @@ public class GregorianCalendarTest extends junit.framework.TestCase {
         for (int i = 0; i < max.length; i++) {
             if (gc.getLeastMaximum(i) != max[i]) {
                 result.set(i);
-                values.add(new Integer(gc.getLeastMaximum(i)));
+                values.add(Integer.valueOf(gc.getLeastMaximum(i)));
             }
         }
         assertTrue("Wrong least max for " + result + " = " + values, result
@@ -467,7 +467,7 @@ public class GregorianCalendarTest extends junit.framework.TestCase {
         for (int i = 0; i < max.length; i++) {
             if (gc.getMaximum(i) != max[i]) {
                 result.set(i);
-                values.add(new Integer(gc.getMaximum(i)));
+                values.add(Integer.valueOf(gc.getMaximum(i)));
             }
         }
         assertTrue("Wrong max for " + result + " = " + values,
