@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -276,7 +276,7 @@ public class UpdateFunctionalityTest2 extends TestCase {
                 + DatabaseCreator.TEST_TABLE5
                 + " WHERE testID < 3 ORDER BY testID");
         while (r.next()) {
-            assertEquals("Incorrect value was returned", new Integer(r
+            assertEquals("Incorrect value was returned", Integer.valueOf(r
                     .getInt(1)).toString(), r.getString(2));
         }
         r.close();
