@@ -6,7 +6,7 @@
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -45,21 +45,21 @@ public class Support_UnmodifiableCollectionTest extends TestCase {
 
         // contains
         assertTrue("UnmodifiableCollectionTest - should contain 0", col
-                .contains(new Integer(0)));
+                .contains(Integer.valueOf(0)));
         assertTrue("UnmodifiableCollectionTest - should contain 50", col
-                .contains(new Integer(50)));
+                .contains(Integer.valueOf(50)));
         assertTrue("UnmodifiableCollectionTest - should not contain 100", !col
-                .contains(new Integer(100)));
+                .contains(Integer.valueOf(100)));
 
         // containsAll
         HashSet<Integer> hs = new HashSet<Integer>();
-        hs.add(new Integer(0));
-        hs.add(new Integer(25));
-        hs.add(new Integer(99));
+        hs.add(Integer.valueOf(0));
+        hs.add(Integer.valueOf(25));
+        hs.add(Integer.valueOf(99));
         assertTrue(
                 "UnmodifiableCollectionTest - should contain set of 0, 25, and 99",
                 col.containsAll(hs));
-        hs.add(new Integer(100));
+        hs.add(Integer.valueOf(100));
         assertTrue(
                 "UnmodifiableCollectionTest - should not contain set of 0, 25, 99 and 100",
                 !col.containsAll(hs));
